--- a/Lection1_HW/index.html
+++ b/Lection1_HW/index.html
@@ -7,9 +7,9 @@
     <title>Homework</title>
 </head>
 <body>
-    <img src="Resources/Images/800px.jpg" width="800" height="800">
+    <img src="Resources/Images/800px.jpg" width=800px height=800px>
     <br>
-    <div id="first" width="800" height="800">
+    <div id="first" width=800px height=800px>
         <div>
             <h1>This is Messi</h1>
         </div>
@@ -18,9 +18,9 @@
     <br>
         <dt>
             <ul>
-                <li>Name</li>
-                <li>Nationality</li>
-                <li>Team</li>
+                <li>Param 1</li>
+                <li>Param 2</li>
+                <li>Param 3</li>
                 <li>Else...</li>
             </ul>
         </dt>
