--- a/Lection1_HW/items.html
+++ b/Lection1_HW/items.html
@@ -17,47 +17,113 @@
         </style>
     </head>
     <body>
-            <table>
-                    <caption>Messi parameters</caption>
+            <table size >
+                    <caption>Parameters</caption>
                     <thead>
                         <tr>
-                            <th>Name</th>
-                            <th>Nationality</th>
-                            <th>Age</th>
-                            <th>Club</th>
-                            <th colspan="2">Goals statistic</th>
-                            <th>Season</th>
+                            <th width=100px>Parameter 1</th>
+                            <th width=100px>Parameter 2</th>
+                            <th width=100px>Parameter 3</th>
+                            <th width=200px colspan="2">Parameter 4</th>
+                            <th width=100px>Parameter 5</th>
+                            <th width=100px>Change</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td rowspan="3"><font size="4" color="red">Lionel Messi</font></td>
-                            <td rowspan="3">Argentine</td>
-                            <td rowspan="3">31</td>
-                            <td rowspan="3"><b>Barcelona</b></td>
-                            <td colspan="2"><p align="center">55</p></td>
-                            <td id="year">2015</td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=200px colspan="2"></td>
+                            <td width=100px></td>
+                            <td width=100px align="center"><input type="button" id="button1" value="Change" enabled></td>
+                            <td width=100px align="center"><input type="button" id="button2" value="Delete" disabled></td>
                         </tr>
                         <tr>
-                            <td rowspan="2" colspan="2"><p align="center">60</p></td>
-                            <td>2016</td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=200px colspan="2"></td>
+                            <td width=100px></td>
+                            <td width=100px align="center"><input type="button" id="button1" value="Change" enabled></td>
+                            <td width=100px align="center"><input type="button" id="button2" value="Delete" disabled></td>
                         </tr>
                         <tr>
-                            <td>2017</td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=200px colspan="2"></td>
+                            <td width=100px></td>
+                            <td width=100px align="center"><input type="button" id="button1" value="Change" enabled></td>
+                            <td width=100px align="center"><input type="button" id="button2" value="Delete" disabled></td>
                         </tr>
                         <tr>
-                            <td colspan="7">
-                                <p align="center"> 
-                                    <font size="5" face="Arial">
-                                        <a href="item.html" type="text/html">Change</a>
-                                    </font>
-                                </p>
-                            </td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=200px colspan="2"></td>
+                            <td width=100px></td>
+                            <td width=100px align="center"><input type="button" id="button1" value="Change" enabled></td>
+                            <td width=100px align="center"><input type="button" id="button2" value="Delete" disabled></td>
                         </tr>
-
+                        <tr>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=200px colspan="2"></td>
+                            <td width=100px></td>
+                            <td width=100px align="center"><input type="button" id="button1" value="Change" enabled></td>
+                            <td width=100px align="center"><input type="button" id="button2" value="Delete" disabled></td>
+                        </tr>
+                        <tr>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=200px colspan="2"></td>
+                            <td width=100px></td>
+                            <td width=100px align="center"><input type="button" id="button1" value="Change" enabled></td>
+                            <td width=100px align="center"><input type="button" id="button2" value="Delete" disabled></td>
+                        </tr>
+                        <tr>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=200px colspan="2"></td>
+                            <td width=100px></td>
+                            <td width=100px align="center"><input type="button" id="button1" value="Change" enabled></td>
+                            <td width=100px align="center"><input type="button" id="button2" value="Delete" disabled></td>
+                        </tr>
+                        <tr>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=200px colspan="2"></td>
+                            <td width=100px></td>
+                            <td width=100px align="center"><input type="button" id="button1" value="Change" enabled></td>
+                            <td width=100px align="center"><input type="button" id="button2" value="Delete" disabled></td>
+                        </tr>
+                        <tr>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=200px colspan="2"></td>
+                            <td width=100px></td>
+                            <td width=100px align="center"><input type="button" id="button1" value="Change" enabled></td>
+                            <td width=100px align="center"><input type="button" id="button2" value="Delete" disabled></td>
+                        </tr>
+                        <tr>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=100px></td>
+                            <td width=200px colspan="2"></td>
+                            <td width=100px></td>
+                            <td width=100px align="center"><input type="button" id="button1" value="Change" enabled></td>
+                            <td width=100px align="center"><input type="button" id="button2" value="Delete" disabled></td>
+                        </tr>
                     </tbody>
                 </table>
-
+        <br>
+        <a href="item.html" type="text/html">Create/change item</a>
         <br>
         <a href="index.html" type="text/html">Back</a>
     </body>
