--- a/Lection4_HW/HW4_task1.html
+++ b/Lection4_HW/HW4_task1.html
@@ -32,16 +32,17 @@
             </div>
 
             <div class="form-group">
-                    <label for="HTT">Hyper-Threading technology</label>
-                    <select class="form-control" id="HTT" name="HTT">
-                        <option>Yes</option>
-                        <option>No</option>
-                    </select>
+                <label for="HTT">Hyper-Threading technology</label>
+                <select class="form-control" id="HTT" name="HTT">
+                    <option>Yes</option>
+                    <option>No</option>
+                </select>
             </div>
 
             <div class="form-group">
                 <label for="ArchitectureBitDepth">Architecture Bit Depth</label>
-                <input class="form-control" type="number" id="ArchitectureBitDepth" placeholder="Architecture Bit Depth" name="ArchitectureBitDepth">
+                <input class="form-control" type="number" id="ArchitectureBitDepth" placeholder="Architecture Bit Depth"
+                    name="ArchitectureBitDepth">
             </div>
 
             <div class="form-group">
@@ -60,10 +61,10 @@
             </div>
 
             <div class="form-group">
-                    <label for="HardDiskSize">Hard Disk Size</label>
-                    <input class="form-control" type="number" id="HardDiskSize" placeholder="Hard Disk Size" name="HardDiskSize">
-                </div>
-            
+                <label for="HardDiskSize">Hard Disk Size</label>
+                <input class="form-control" type="number" id="HardDiskSize" placeholder="Hard Disk Size" name="HardDiskSize">
+            </div>
+
             <div class="d-flex justify-content-between">
                 <button type="submit" id="add" name="add" class="btn btn-primary">Add</button>
                 <button type="submit" id="clear" name="clear" class="btn btn-primary">Clear</button>
@@ -109,6 +110,17 @@
                     <td>Card</td>
                     <td>1024</td>
                     <td>12</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Intel</td>
+                    <td>150</td>
+                    <td>Yes</td>
+                    <td>256</td>
+                    <td>Google</td>
+                    <td>wtrywrt</td>
+                    <td>512</td>
+                    <td>88</td>
                 </tr>
             </tbody>
         </table>
