--- a/Lection5-6_HW/HW5-6_task.html
+++ b/Lection5-6_HW/HW5-6_task.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HW4 - task 1</title>
+    <title>HW5-6 - task 1</title>
     <script src="HW5-6_task_js.js"></script>
     <script src="HW5-6_crud_js.js"></script>
     <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
