--- a/Lection5-6_HW/HW5-6_task.html
+++ b/Lection5-6_HW/HW5-6_task.html
@@ -18,17 +18,18 @@
                 <label for="user_id">ID</label>
                 <input class="form-control" type="text" id="user_id" placeholder="Select Row" name="user_id" disabled>
             </div>
+
+            <div class="form-group">
+                <label for="number">Number of processor cores</label>
+                <input class="form-control" type="number" id="number" placeholder="Enter Number" name="number">
+            </div>
+
             <div class="form-group">
                 <label for="typeOfProcessor">Type Of Processor</label>
                 <select class="form-control" id="typeOfProcessor" name="typeOfProcessor">
                     <option>Intel</option>
                     <option>AMD</option>
                 </select>
-            </div>
-
-            <div class="form-group">
-                <label for="number">Number of processor cores</label>
-                <input class="form-control" type="number" id="number" placeholder="Enter Number" name="number">
             </div>
 
             <div class="form-group">
@@ -84,7 +85,8 @@
         <table class="table table-sm" id="tab">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
+                <!--   <th scope="col">#</th>
+                    <th scope="col">Number</th>
                     <th scope="col">Type Of Processor</th>
                     <th scope="col">Frequency</th>
                     <th scope="col">Hyper-Threading technology</th>
@@ -92,43 +94,11 @@
                     <th scope="col">Manufacturer</th>
                     <th scope="col">Grafic Card</th>
                     <th scope="col">RAM Size</th>
-                    <th scope="col">Hard Disk Size</th>
+                    <th scope="col">Hard Disk Size</th>--> 
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Intel</td>
-                    <td>10</td>
-                    <td>Yes</td>
-                    <td>124</td>
-                    <td>Apple</td>
-                    <td>Graf</td>
-                    <td>124</td>
-                    <td>8</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>AMD</td>
-                    <td>15</td>
-                    <td>No</td>
-                    <td>256</td>
-                    <td>Microsoft</td>
-                    <td>Card</td>
-                    <td>1024</td>
-                    <td>12</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Intel</td>
-                    <td>150</td>
-                    <td>Yes</td>
-                    <td>256</td>
-                    <td>Google</td>
-                    <td>wtrywrt</td>
-                    <td>512</td>
-                    <td>88</td>
-                </tr>
+            <tbody id="TabBody">
+
             </tbody>
         </table>
     </div>
